kubernetes/apps/kube-system/cilium/policies/allow-devtools-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# DevTools internal: tous les pods du namespace devtools peuvent communiquer entre eux
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-devtools-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: devtools
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: devtools
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: devtools
